# jaydanhoward

./: .bazelrc  .bazelrc.ci  .dockerignore  .gitignore  .rust-analyzer.toml  BUILD  CLAUDE.md  Cargo.server.toml  Cargo.toml  Cargo.wasm.toml  Dockerfile  MODULE.bazel  README.md  WORKSPACE.bazel  [  control_job.sh  entrypoint.sh  leptos.toml  nginx.conf  package-lock.json  package.json  playwright.config.ts  rust-analyzer.json  rust-project.json  spec.yaml  tailwind.config.js  wasm_bindgen.BUILD  workspace_status.sh
.github/actions/bootstrap/: action.yaml
.github/workflows/: audit.yml  general.yml  integration.yml
assets/: BUILD  leptos_start.js  leptos_start.wasm  leptos_start_bg.wasm  life-worker.js  lighthouse-report.html  lighthouse.html  main.css  resume.md  tailwind.css
assets/fontawesome/css/: BUILD
assets/fontawesome/webfonts/: BUILD
assets/fonts/: BUILD
bzl/: deb_archive.bzl  tailwindcss.bzl
foster-server/: .gitignore  Cargo.toml  Dockerfile
foster-server/migrations/: 0002_create_conjunctions.sql  0004_add_calculated_by.sql  0008_spike_claims.sql  0010_tle_cache.sql  0011_security_audit.sql
foster-server/src/: cluster.rs  conjunction.rs  lighthouse.rs  main.rs  photography.rs  prometheus_client.rs  request_trace.rs  satellites.rs  security_audit.rs  site_middleware.rs  visitors.rs
foster-server/static/: cluster.js  conjunction.js  index.html  life.js  pathfinding.js  photography.js  request_trace.js  satellites.js  scrollspy.js  visitors.js
lighthouse/: BUILD  Dockerfile  Dockerfile.base  README.md  build_base.sh  entrypoint.sh  manual_update.sh
migrations/: 0001_create_visitors.sql  0003_conjunction_screening_lock.sql  0005_conjunction_chunks.sql  0006_network_insights.sql  0007_spike_detector_config.sql  0009_claude_audit_log.sql
scripts/: BUILD  security_audit.sh
security-audit/: BUILD  Dockerfile  entrypoint.py  entrypoint.sh
src/: app.rs  configuration.rs  dark_mode.rs  db.rs  lib.rs  main.rs  network_spike.rs  prometheus_client.rs  startup.rs  telemtry.rs
src/components/: about.rs  app.rs  beliefs.rs  binary_nav_switcher.rs  canvas_nav.rs  cluster_stats.rs  conjunction.rs  dark_mode_toggle.rs  dev.rs  diagnostics.rs  flux_graph.rs  footer.rs  icons.rs  life.rs  lighthouse.rs  link.rs  mod.rs  nav.rs  path_search.rs  photography.rs  projects.rs  request_trace.rs  resume.rs  satellite_calculations.rs  satellite_renderer.rs  satellite_tracker.rs  sd_sync_reports.rs  security_audit.rs  skills.rs  skills_beliefs_switchers.rs  source_anchor.rs  visitors.rs  work.rs
src/middleware/: cache_control.rs  mod.rs  rate_limit.rs  security_headers.rs  visitor_logger.rs
src/routes/: audit.rs  health_check.rs  metrics_stream.rs  mod.rs  robots.rs  security_audit.rs  world_map.rs
src/routes/lighthouse/: mod.rs  post.rs
style/: main.css  main.scss
tests/: conjunction.spec.ts  debug.spec.ts  infra.spec.ts  sections.spec.ts  smoke.spec.ts
wasm_bindgen/: BUILD  wasm_bindgen_linux_arm64.BUILD  wasm_bindgen_linux_x86_64.BUILD  wasm_bindgen_mac_arm64.BUILD
wasm_bindgen/rust/: BUILD
