[package]
name = "jaydanhoward"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
actix-files = { version = "0.6", optional = true }
actix-web = { version = "4.8", optional = true, features = ["macros", "rustls-0_23"] }
console_error_panic_hook = "0.1"
config = { version = "0.14.1", default-features = false, features = ["yaml"] }
cfg-if = "1"
http = { version = "0.2", optional = true }
leptos = { version = "0.6.15", features = ["nightly", "rustls"] }
leptos_meta = { version = "0.6.15", features = ["nightly"] }
leptos_actix = { version = "0.6.15", optional = true }
leptos_router = { version = "0.6.15", features = ["nightly"] }
wasm-bindgen = "=0.2.99"
web-sys = { version = "0.3.70", features = [
  "AbortController",
  "AbortSignal",
  "HtmlDocument",
  "MediaQueryList",
  "Touch",
  "TouchEvent",
  "TouchEventInit",
  "TouchInit",
  "TouchList",
  "Window"
]}
serde = "1.0.183"
serde-aux = { version = "4", optional = true }
serde_json = { version = "1", optional = true }
anyhow = "1.0.72"
tokio = { version = "1", optional = true, features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.19", optional = true} 
tracing-actix-web = { version = "0.7", optional = true} 
tracing-bunyan-formatter = { version = "0.3", optional = true}
tracing-log = { version = "0.1.1", optional = true}
tracing-subscriber = { version = "0.3", optional = true, features = ["registry", "env-filter"] }
actix-multipart = { version = "0.6.0", optional = true } 
futures = { version = "0.3.28", optional = true }
futures-util = { version = "0.3.28", optional = true} 
secrecy = { version = "0.8.0", optional = true }
base64 = { version = "0.21.2", optional = true } 
thiserror = "1.0.47"
femark = { version = "0.1.4", optional = true }
pulldown-cmark = { version = "0.9.3", optional = true }
chrono = { version = "0.4.26", optional = true }
rand = "0.8.5"
reqwest = { version = "=0.12.5", features = ["http2", "rustls-tls", "json", "gzip", "cookies", "multipart", "stream"], default-features = false }

[features]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
  "dep:actix-files",
  "dep:actix-web",
  "dep:leptos_actix",
  "dep:tokio",
  "dep:tracing",
  "dep:tracing-bunyan-formatter",
  "dep:tracing-log",
  "dep:tracing-subscriber",
  "dep:actix-multipart",
  "dep:futures",
  "dep:futures-util",
  "dep:secrecy",
  "dep:base64",
  "dep:serde-aux",
  "dep:serde_json",
  "dep:femark",
  "dep:pulldown-cmark",
  "dep:chrono",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
output-name = "leptos_start"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.css"
assets-dir = "assets"
site-addr = "127.0.0.1:8000"
reload-port = 8001
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
browserquery = "defaults"
watch = false
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
tailwind-input-file = "style/main.css"
tailwind-config-file = "tailwind.config.js"
