module(
    name = "jaydanhoward",
    version = "1.0",
)

bazel_dep(
    name = "rules_pkg",
    version = "1.0.1",
)
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "aspect_bazel_lib", version = "2.10.0")
bazel_dep(name = "bazel_features", version = "1.11.0") 

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "tailwind_linux_x86_64",
    executable = True,
    sha256 = "33f254b54c8754f16efbe2be1de38ca25192630dc36f164595a770d4bbf4d893",
    url = "https://github.com/tailwindlabs/tailwindcss/releases/download/v3.4.16/tailwindcss-linux-x64",
)

http_file(
    name = "tailwind_linux_arm64",
    executable = True,
    sha256 = "1e6746bba6f3d34d7550889a1a009ab90ee3794a5ebce60ed10688ad10680a87",
    url = "https://github.com/tailwindlabs/tailwindcss/releases/download/v3.4.16/tailwindcss-linux-arm64",
)

http_file(
    name = "tailwind_mac_arm64",
    executable = True,
    sha256 = "a1d0c7985759accca0bf12e51ac1dcbf0f6cf2fffb62e6e0f62d091c477a10a3",
    url = "https://github.com/tailwindlabs/tailwindcss/releases/download/v3.4.17/tailwindcss-macos-arm64",
)

http_archive(
    name = "wasm_bindgen_linux_x86_64",
    build_file = "//wasm_bindgen:wasm_bindgen_linux_x86_64.BUILD",
    sha256 = "63d6a38deb65bd7023c02bdf382ab66b0d2c0241c8582fd3413b5a808b8aeb5b",
    strip_prefix = "wasm-bindgen-0.2.100-x86_64-unknown-linux-musl",
    urls = ["https://github.com/rustwasm/wasm-bindgen/releases/download/0.2.100/wasm-bindgen-0.2.100-x86_64-unknown-linux-musl.tar.gz"],
)

http_archive(
    name = "wasm_bindgen_linux_arm64",
    build_file = "//wasm_bindgen:wasm_bindgen_linux_arm64.BUILD",
    sha256 = "52552984965fbd125efc6be052b3cb8872fb3c69559e4ec7775cbff64ed440cf",
    strip_prefix = "wasm-bindgen-0.2.100-aarch64-unknown-linux-gnu",
    urls = ["https://github.com/rustwasm/wasm-bindgen/releases/download/0.2.100/wasm-bindgen-0.2.100-aarch64-unknown-linux-gnu.tar.gz"],
)

http_archive(
    name = "wasm_bindgen_mac_arm64",
    build_file = "//wasm_bindgen:wasm_bindgen_mac_arm64.BUILD",
    sha256 = "69f25cb910de7e19777b3f93347f5e62a64c8f81709b41ba7242d00a9543573c",
    strip_prefix = "wasm-bindgen-0.2.100-aarch64-apple-darwin",
    urls = ["https://github.com/rustwasm/wasm-bindgen/releases/download/0.2.100/wasm-bindgen-0.2.100-aarch64-apple-darwin.tar.gz"],
)

bazel_dep(name = "rules_oci", version = "2.2.0")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_base",
    image = "gcr.io/distroless/base",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
    tag = "latest",
)
oci.pull(
    name = "distroless_cc_debian12",
    image = "gcr.io/distroless/cc-debian12",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
    tag = "latest",
)
use_repo(oci, "distroless_base", "distroless_base_linux_amd64", "distroless_base_linux_arm64_v8", "distroless_cc_debian12", "distroless_cc_debian12_linux_amd64", "distroless_cc_debian12_linux_arm64_v8")
