module(
    name = "jaydanhoward",
    version = "1.0",
)

bazel_dep(
    name = "rules_pkg",
    version = "1.0.1",
)
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "bazel_features", version = "1.33.0")
bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "rules_rust", version = "0.68.1")
bazel_dep(name = "rules_rust_wasm_bindgen", version = "0.68.1")
bazel_dep(name = "rules_rust_bindgen", version = "0.68.1")

# rules_rust 0.68.1 (latest BCR release) doesn't support Bazel 9 because CcInfo
# moved from a built-in to @rules_cc. Use HEAD of main which has the fix.
_RULES_RUST_COMMIT = "af24d277c91a69a0eae05b4ade444dae4e2784c4"
_RULES_RUST_ARCHIVE = "https://github.com/bazelbuild/rules_rust/archive/{commit}.tar.gz"
_RULES_RUST_STRIP = "rules_rust-{commit}"

archive_override(
    module_name = "rules_rust",
    integrity = "sha256-8SHrw0ZpYY187RkjmxivY0MXM5YtS51B9NOKLxbzyAA=",
    urls = [_RULES_RUST_ARCHIVE.format(commit = _RULES_RUST_COMMIT)],
    strip_prefix = _RULES_RUST_STRIP.format(commit = _RULES_RUST_COMMIT),
)

archive_override(
    module_name = "rules_rust_wasm_bindgen",
    integrity = "sha256-8SHrw0ZpYY187RkjmxivY0MXM5YtS51B9NOKLxbzyAA=",
    urls = [_RULES_RUST_ARCHIVE.format(commit = _RULES_RUST_COMMIT)],
    strip_prefix = _RULES_RUST_STRIP.format(commit = _RULES_RUST_COMMIT) + "/extensions/wasm_bindgen",
)

archive_override(
    module_name = "rules_rust_bindgen",
    integrity = "sha256-8SHrw0ZpYY187RkjmxivY0MXM5YtS51B9NOKLxbzyAA=",
    urls = [_RULES_RUST_ARCHIVE.format(commit = _RULES_RUST_COMMIT)],
    strip_prefix = _RULES_RUST_STRIP.format(commit = _RULES_RUST_COMMIT) + "/extensions/bindgen",
)

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["nightly/2025-07-01"],
    extra_target_triples = [
        "x86_64-unknown-linux-gnu",
        "aarch64-unknown-linux-gnu",
        "wasm32-unknown-unknown",
    ],
)
use_repo(rust, "rust_toolchains")
register_toolchains("@rust_toolchains//:all")
register_toolchains("//wasm_bindgen:wasm_bindgen_toolchain")

# Server crate dependencies (native target)
server_crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
server_crate.from_cargo(
    name = "server_crates",
    cargo_lockfile = "//:Cargo.server.lock",
    manifests = ["//:Cargo.server.toml"],
)
use_repo(server_crate, "server_crates")

# WASM crate dependencies (wasm32 target)
wasm_crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
wasm_crate.from_cargo(
    name = "wasm_crates",
    cargo_lockfile = "//:Cargo.wasm.lock",
    manifests = ["//:Cargo.wasm.toml"],
)
use_repo(wasm_crate, "wasm_crates")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

deb_archive = use_repo_rule("//bzl:deb_archive.bzl", "deb_archive")

http_file(
    name = "tailwind_linux_x86_64",
    executable = True,
    sha256 = "33f254b54c8754f16efbe2be1de38ca25192630dc36f164595a770d4bbf4d893",
    url = "https://github.com/tailwindlabs/tailwindcss/releases/download/v3.4.16/tailwindcss-linux-x64",
)

http_file(
    name = "tailwind_linux_arm64",
    executable = True,
    sha256 = "1e6746bba6f3d34d7550889a1a009ab90ee3794a5ebce60ed10688ad10680a87",
    url = "https://github.com/tailwindlabs/tailwindcss/releases/download/v3.4.16/tailwindcss-linux-arm64",
)

http_file(
    name = "tailwind_mac_arm64",
    executable = True,
    sha256 = "a1d0c7985759accca0bf12e51ac1dcbf0f6cf2fffb62e6e0f62d091c477a10a3",
    url = "https://github.com/tailwindlabs/tailwindcss/releases/download/v3.4.17/tailwindcss-macos-arm64",
)

deb_archive(
    name = "zstd_deb_amd64",
    build_file_content = """
exports_files(["usr/lib/x86_64-linux-gnu/libzstd.so.1.5.7"])
filegroup(
    name = "file",
    srcs = ["usr/lib/x86_64-linux-gnu/libzstd.so.1.5.7"],
    visibility = ["//visibility:public"],
)
""",
    sha256 = "2f6a2aeacfc925eba8b00ac9139bc4bfccf8cacb09eb93de067074b26948eef9",
    urls = ["http://ftp.us.debian.org/debian/pool/main/libz/libzstd/libzstd1_1.5.7+dfsg-1_amd64.deb"],
)

deb_archive(
    name = "zstd_deb_arm64",
    build_file_content = """
exports_files(["usr/lib/aarch64-linux-gnu/libzstd.so.1.5.7"])
filegroup(
    name = "file",
    srcs = ["usr/lib/aarch64-linux-gnu/libzstd.so.1.5.7"],
    visibility = ["//visibility:public"],
)
""",
    sha256 = "924540bd59fdbfa77a0604360efdaca54411a43daf11c7e002a3c64791b67448",
    urls = ["http://ftp.us.debian.org/debian/pool/main/libz/libzstd/libzstd1_1.5.7+dfsg-1_arm64.deb"],
)

http_archive(
    name = "cargo_audit_linux_x86_64",
    build_file_content = """
exports_files(["cargo-audit"])
filegroup(
    name = "binary",
    srcs = ["cargo-audit"],
    visibility = ["//visibility:public"],
)
""",
    sha256 = "c32506f338bdcdaef5a17fb9f33abb6ecf9561324cfd34237fd335f9283a1eab",
    strip_prefix = "cargo-audit-x86_64-unknown-linux-musl-v0.22.1",
    urls = ["https://github.com/rustsec/rustsec/releases/download/cargo-audit/v0.22.1/cargo-audit-x86_64-unknown-linux-musl-v0.22.1.tgz"],
)

http_archive(
    name = "cargo_audit_linux_arm64",
    build_file_content = """
exports_files(["cargo-audit"])
filegroup(
    name = "binary",
    srcs = ["cargo-audit"],
    visibility = ["//visibility:public"],
)
""",
    sha256 = "4c8df835ee484441bd2c8c6bcac28c4ce4b4058ba9e7477cb9e0012fe7769f66",
    strip_prefix = "cargo-audit-aarch64-unknown-linux-gnu-v0.22.1",
    urls = ["https://github.com/rustsec/rustsec/releases/download/cargo-audit/v0.22.1/cargo-audit-aarch64-unknown-linux-gnu-v0.22.1.tgz"],
)

http_archive(
    name = "cargo_audit_macos_x86_64",
    build_file_content = """
exports_files(["cargo-audit"])
filegroup(
    name = "binary",
    srcs = ["cargo-audit"],
    visibility = ["//visibility:public"],
)
""",
    sha256 = "582d104a2a4bdb127c6bf6d056d89eede40686d11f52e4bc1765132ec99d2fca",
    strip_prefix = "cargo-audit-x86_64-apple-darwin-v0.22.1",
    urls = ["https://github.com/rustsec/rustsec/releases/download/cargo-audit/v0.22.1/cargo-audit-x86_64-apple-darwin-v0.22.1.tgz"],
)

http_archive(
    name = "wasm_bindgen_linux_x86_64",
    build_file = "//wasm_bindgen:wasm_bindgen_linux_x86_64.BUILD",
    sha256 = "63d6a38deb65bd7023c02bdf382ab66b0d2c0241c8582fd3413b5a808b8aeb5b",
    strip_prefix = "wasm-bindgen-0.2.100-x86_64-unknown-linux-musl",
    urls = ["https://github.com/rustwasm/wasm-bindgen/releases/download/0.2.100/wasm-bindgen-0.2.100-x86_64-unknown-linux-musl.tar.gz"],
)

http_archive(
    name = "wasm_bindgen_linux_arm64",
    build_file = "//wasm_bindgen:wasm_bindgen_linux_arm64.BUILD",
    sha256 = "52552984965fbd125efc6be052b3cb8872fb3c69559e4ec7775cbff64ed440cf",
    strip_prefix = "wasm-bindgen-0.2.100-aarch64-unknown-linux-gnu",
    urls = ["https://github.com/rustwasm/wasm-bindgen/releases/download/0.2.100/wasm-bindgen-0.2.100-aarch64-unknown-linux-gnu.tar.gz"],
)

http_archive(
    name = "wasm_bindgen_mac_arm64",
    build_file = "//wasm_bindgen:wasm_bindgen_mac_arm64.BUILD",
    sha256 = "69f25cb910de7e19777b3f93347f5e62a64c8f81709b41ba7242d00a9543573c",
    strip_prefix = "wasm-bindgen-0.2.100-aarch64-apple-darwin",
    urls = ["https://github.com/rustwasm/wasm-bindgen/releases/download/0.2.100/wasm-bindgen-0.2.100-aarch64-apple-darwin.tar.gz"],
)

bazel_dep(name = "rules_oci", version = "2.2.0")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_base",
    image = "gcr.io/distroless/base",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
    tag = "latest",
)
oci.pull(
    name = "distroless_cc_debian13",
    image = "gcr.io/distroless/cc-debian13",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
    digest = "sha256:c2cac2cc7c4b1a853569b7a022d8105bf9669741e28bff13e31093ee18f229bb",
)

use_repo(oci, "distroless_base", "distroless_base_linux_amd64", "distroless_base_linux_arm64_v8", "distroless_cc_debian13", "distroless_cc_debian13_linux_amd64", "distroless_cc_debian13_linux_arm64_v8")

