module(
    name = "jaydanhoward",
    version = "1.0",
)

bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "bazel_features", version = "1.33.0")
bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "rules_rust", version = "0.68.1")
bazel_dep(name = "rules_rust_wasm_bindgen", version = "0.68.1")
bazel_dep(name = "rules_rust_bindgen", version = "0.68.1")
bazel_dep(name = "jdh_rules", version = "0.1.0")

git_override(
    module_name = "jdh_rules",
    remote = "https://github.com/jaydh/jdh-bazel.git",
    commit = "6c5350c365243a2a204fae453dd5b89bb2cf1b18",
)

# rules_rust 0.68.1 (latest BCR release) doesn't support Bazel 9 because CcInfo
# moved from a built-in to @rules_cc. Use HEAD of main which has the fix.
_RULES_RUST_COMMIT = "af24d277c91a69a0eae05b4ade444dae4e2784c4"
_RULES_RUST_ARCHIVE = "https://github.com/bazelbuild/rules_rust/archive/{commit}.tar.gz"
_RULES_RUST_STRIP = "rules_rust-{commit}"

archive_override(
    module_name = "rules_rust",
    integrity = "sha256-8SHrw0ZpYY187RkjmxivY0MXM5YtS51B9NOKLxbzyAA=",
    urls = [_RULES_RUST_ARCHIVE.format(commit = _RULES_RUST_COMMIT)],
    strip_prefix = _RULES_RUST_STRIP.format(commit = _RULES_RUST_COMMIT),
)

archive_override(
    module_name = "rules_rust_wasm_bindgen",
    integrity = "sha256-8SHrw0ZpYY187RkjmxivY0MXM5YtS51B9NOKLxbzyAA=",
    urls = [_RULES_RUST_ARCHIVE.format(commit = _RULES_RUST_COMMIT)],
    strip_prefix = _RULES_RUST_STRIP.format(commit = _RULES_RUST_COMMIT) + "/extensions/wasm_bindgen",
)

archive_override(
    module_name = "rules_rust_bindgen",
    integrity = "sha256-8SHrw0ZpYY187RkjmxivY0MXM5YtS51B9NOKLxbzyAA=",
    urls = [_RULES_RUST_ARCHIVE.format(commit = _RULES_RUST_COMMIT)],
    strip_prefix = _RULES_RUST_STRIP.format(commit = _RULES_RUST_COMMIT) + "/extensions/bindgen",
)

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["nightly/2025-07-01"],
    extra_target_triples = [
        "x86_64-unknown-linux-gnu",
        "aarch64-unknown-linux-gnu",
        "wasm32-unknown-unknown",
    ],
)
use_repo(rust, "rust_toolchains")
register_toolchains("@rust_toolchains//:all")
register_toolchains("//wasm_bindgen:wasm_bindgen_toolchain")

# Server crate dependencies (native target)
server_crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
server_crate.from_cargo(
    name = "server_crates",
    cargo_lockfile = "//:Cargo.server.lock",
    manifests = ["//:Cargo.server.toml"],
)
use_repo(server_crate, "server_crates")

# WASM crate dependencies (wasm32 target)
wasm_crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
wasm_crate.from_cargo(
    name = "wasm_crates",
    cargo_lockfile = "//:Cargo.wasm.lock",
    manifests = ["//:Cargo.wasm.toml"],
)
# wasm_split_macros::version_stamp!() calls std::env::var_os("CARGO_MANIFEST_PATH").unwrap()
# which panics in Bazel's sandbox because Bazel doesn't set CARGO_MANIFEST_PATH.
# Provide a stable value so the SHA256 hash it computes is consistent across builds.
wasm_crate.annotation(
    crate = "wasm_split_helpers",
    version = "0.2.1",
    rustc_env = {
        "CARGO_MANIFEST_PATH": "wasm_split_helpers-0.2.1/Cargo.toml",
    },
)
use_repo(wasm_crate, "wasm_crates")

# Platform-specific binaries (tailwind, wasm-opt, wasm-bindgen, cargo-audit, zstd)
# — version pins live in jdh-bazel/extensions/binaries.bzl
jdh_binaries = use_extension("@jdh_rules//extensions:binaries.bzl", "binaries")
use_repo(
    jdh_binaries,
    "cargo_audit_linux_arm64",
    "cargo_audit_linux_x86_64",
    "cargo_audit_macos_x86_64",
    "tailwind_linux_arm64",
    "tailwind_linux_x86_64",
    "tailwind_mac_arm64",
    "wasm_bindgen_linux_arm64",
    "wasm_bindgen_linux_x86_64",
    "wasm_bindgen_mac_arm64",
    "wasm_opt_linux_arm64",
    "wasm_opt_linux_x86_64",
    "wasm_opt_macos_arm64",
    "zstd_deb_amd64",
    "zstd_deb_arm64",
)

bazel_dep(name = "rules_oci", version = "2.2.0")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_base",
    image = "gcr.io/distroless/base",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
    tag = "latest",
)
oci.pull(
    name = "distroless_cc_debian13",
    image = "gcr.io/distroless/cc-debian13",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
    digest = "sha256:22fd4bd55e5f0ef1929985f111816ba1e43c00a0ddeb001c0fdfb2724b4e3cc2",
)
oci.pull(
    name = "python_slim",
    image = "index.docker.io/library/python",
    platforms = [
        "linux/amd64",
    ],
    digest = "sha256:ee710afcfb733f4a750d9be683cf054b5cd247b6c5f5237a6849ea568b90ab15",
)
use_repo(oci, "distroless_base", "distroless_base_linux_amd64", "distroless_base_linux_arm64_v8", "distroless_cc_debian13", "distroless_cc_debian13_linux_amd64", "distroless_cc_debian13_linux_arm64_v8", "python_slim", "python_slim_linux_amd64")
